[package]
name = "worley-particle"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
image = "0.25.5"
tiny-skia = "0.11.4"

[dependencies]
contour-isobands = { version = "0.4.3", features =  ["parallel"] }
prost = "0.13.4"
rand = "0.8.5"
thiserror = "2.0.9"

[build-dependencies]
prost-build = "0.13.4"

[features]
particlemap = []
