[package]
name = "worley-particle"
version = "0.1.0"
edition = "2021"

[features]
serde = [ "serde_crate", "serde_json", "base64" ]

[dependencies]
contour = "0.13.1"
prost = "0.13.4"
naturalneighbor = "1.2.2"
rand = "0.8.5"
thiserror = "2.0.9"
serde_crate = { package = "serde", version = "1", optional = true }
serde_json = { version = "1.0.140", optional = true }
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]
image = "0.25.5"
tiny-skia = "0.11.4"
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.13.4"
