[package]
name = "worley-particle"
version = "0.1.0"
edition = "2021"

[features]
serialize = [ "serde", "base64" ]

[dependencies]
contour = "0.13.1"
prost = "0.13.4"
naturalneighbor = "1.2.2"
rand = "0.8.5"
thiserror = "2.0.9"
serde = { version = "1", optional = true }
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]
image = "0.25.5"
tiny-skia = "0.11.4"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"

[build-dependencies]
prost-build = "0.13.4"
